# eventhub-examples

./: .env.example  .gitignore  README.md  eventhub-examples.sln  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
examples/1-basic/: README.md  demo.py
examples/2-send_recv/: README.md  recv.py  send.py
examples/3-send_recv_schemaregistry/: README.md  recv.py  send.py
examples/dotnet/: README.md
examples/dotnet/EventHubReceiver/: EventHubReceiver.csproj  Program.cs
examples/dotnet/EventHubSender/: EventHubSender.csproj  Program.cs
